fix: run gradle publish task for publishing to maven central repository

--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -89,7 +89,7 @@ jobs:
 
       - uses: gradle/gradle-build-action@v2.2.5
         with:
-          arguments: publishAllPublicationsToMavenCentralRepository
+          arguments: publish
 
       - name: Clean up
         run: |
