--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -91,6 +91,10 @@ jobs:
         with:
           arguments: publish
 
+      - uses: gradle/gradle-build-action@v2.2.5
+        with:
+          arguments: closeAndReleaseRepository
+
       - name: Clean up
         run: |
           rm -rf ./secring.gpg
